# sky_study

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
users/: models.py  paginations.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
